# qt-android-cmake

./: AddQtAndroidApk.cmake  AndroidManifest.xml.in  CMakeLists.txt  build.gradle.in  qtdeploy.json.in  readme.md
